--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Three ways to get dirty</title>
+  <title>Are you ready FOREPLAY?</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -166,12 +166,11 @@
   <div class="border-wrapper">
     <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
-    <h1>Three ways to get dirty</h1>
+    <h1>Are you ready FOREPLAY</h1>
 
     <div class="buttons">
       <button class="button" onclick="document.getElementById('venueModal').style.display='flex'">Play at a Le Libido Venue</button>
-      <button class="button" onclick="window.location.href='https://lelibido.com/quiz-new.html'">Date on the go</button>
-      <button class="button" onclick="window.location.href='https://lelibido.com/archetype-gallery.html'">Just curious? Explore the Sexy Profiles</button>
+      <button class="button" onclick="window.location.href='https://lelibido.com/archetype-gallery.html'">Just curious? Explore the Sexual Profiles</button>
     </div>
 
     <div class="caption">
@@ -179,7 +178,7 @@
       <span style="color: var(--red);">wild</span>, 
       <span style="color: var(--green);">adventurous</span>, or 
       <span style="color: var(--blue);">romantic</span><br>
-      as you. Step into a Le Libido venue for a night of laughter, lust, and love, or take the magic with you, wherever you go.
+      as you. Step into a Le Libido venue for a night of laughter, lust, and love.
     </div>
   </div>
 
@@ -192,7 +191,7 @@
     <div class="modal-content">
       <span class="close" onclick="document.getElementById('venueModal').style.display='none'">&times;</span>
       <h2>Coming Soon</h2>
-      <p>The first Le Libido venue is coming soon. Want to be a VIP?</p>
+      <p>The first Le Libido venue is coming soon.</p>
       <form action="mailto:spencer@lelibido.com" method="POST" enctype="text/plain">
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="email" name="email" placeholder="Your Email" required />
