--- a/Ai-rate-me.html
+++ b/Ai-rate-me.html
@@ -4,29 +4,28 @@
 <meta charset="UTF-8">
 <title>🔥 AI Hotness Rater 🔥</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.15.0"></script>
 <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2"></script>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
 <style>
-html,body {margin:0;padding:0;background:linear-gradient(180deg,#064D95 0%,#e1bf78 100%);overflow:hidden;font-family:Arial,sans-serif;color:#fff;height:100%;}
-video,canvas {position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;}
-#overlay {pointer-events:none;}
-#rateBtn {position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);padding:20px 40px;font-size:2rem;border:none;border-radius:15px;background:#e1bf78;color:#000;font-weight:bold;cursor:pointer;box-shadow:0 0 20px rgba(225,191,120,0.8);}
-#rateBtn:hover {box-shadow:0 0 25px rgba(225,191,120,1);}
-.bottomPanel {position:absolute;bottom:10px;left:50%;transform:translateX(-50%);text-align:center;background:rgba(0,0,0,0.55);padding:15px 20px;border-radius:15px;backdrop-filter:blur(10px);border:2px solid #e1bf78;opacity:0;transition:opacity 1s ease;max-width:90%;}
-.bottomPanel div {margin:6px 0;}
-#vibeText {font-size:1.2rem;color:#e1bf78;}
-#typeText {font-size:1.1rem;color:#950606;}
-#badgeText {font-size:1.2rem;font-weight:bold;color:#06954E;transform:rotate(-5deg);}
-.shareButtons button {margin:5px;padding:10px 15px;background:#e1bf78;border:none;border-radius:8px;color:#000;font-weight:bold;cursor:pointer;box-shadow:0 0 10px rgba(225,191,120,0.8);}
-.shareButtons button:hover {box-shadow:0 0 15px rgba(225,191,120,1);}
+html, body { margin:0; padding:0; background:linear-gradient(180deg,#064D95 0%,#e1bf78 100%); overflow:hidden; font-family:Arial,sans-serif; color:#fff; height:100%; }
+video, canvas { position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; }
+#overlay { pointer-events:none; }
+.bottomPanel { position:absolute; bottom:10px; left:50%; transform:translateX(-50%); text-align:center; background:rgba(0,0,0,0.55); padding:15px 20px; border-radius:15px; backdrop-filter:blur(10px); border:2px solid #e1bf78; opacity:0; transition:opacity 1s ease; max-width:90%; }
+.bottomPanel div { margin:6px 0; }
+#vibeText { font-size:1.2rem; color:#e1bf78; }
+#typeText { font-size:1.1rem; color:#950606; }
+#badgeText { font-size:1.2rem; font-weight:bold; color:#06954E; transform:rotate(-5deg); transition:transform 0.3s ease; }
+.shareButtons button { margin:5px; padding:10px 15px; background:#e1bf78; border:none; border-radius:8px; color:#000; font-weight:bold; cursor:pointer; box-shadow:0 0 10px rgba(225,191,120,0.8); }
+.shareButtons button:hover { box-shadow:0 0 15px rgba(225,191,120,1); }
 </style>
 </head>
 <body>
 
 <video id="camera" autoplay muted playsinline></video>
 <canvas id="overlay"></canvas>
-<button id="rateBtn">RATE ME 🔥</button>
 
 <div class="bottomPanel" id="resultsPanel">
   <div id="vibeText"></div>
@@ -36,52 +35,43 @@ video,canvas {position:absolute;top:0;left:0;width:100%;height:100%;object-fit:c
   <div class="shareButtons" id="shareSection"></div>
 </div>
 
-<!-- Minimized Base64 audio -->
+<!-- Minimized audio -->
 <audio id="bgBeat" loop><source src="data:audio/mp3;base64,//uQxAAAA..." type="audio/mp3"></audio>
 <audio id="chime"><source src="data:audio/mp3;base64,//uQxAAAA..." type="audio/mp3"></audio>
 
 <script>
-const vibeList=["Dangerously charming","CEO of bad decisions","Hot but allergic to commitment","Too sexy for small talk","Professional heartbreaker","Mysterious trouble"];
-const typeList=["Gym rat with daddy issues","Tattooed poet who ghosted you","Trust fund surfer","Crypto bro with a yacht","Barista in a punk band","Divorced millionaire","Your therapist’s ex"];
-const hotTakeList=["You peaked in your profile picture","Hot enough to start drama","Looks like trouble, feels like vacation","Too good for dating apps","Your DMs are a warzone","At least 3 people stalk your Instagram daily"];
+const vibeList = ["Dangerously charming","CEO of bad decisions","Hot but allergic to commitment","Too sexy for small talk","Professional heartbreaker","Mysterious trouble"];
+const typeList = ["Gym rat with daddy issues","Tattooed poet who ghosted you","Trust fund surfer","Crypto bro with a yacht","Barista in a punk band","Divorced millionaire","Your therapist’s ex"];
+const hotTakeList = ["You peaked in your profile picture","Hot enough to start drama","Looks like trouble, feels like vacation","Too good for dating apps","Your DMs are a warzone","At least 3 people stalk your Instagram daily"];
 
 let video=document.getElementById('camera');
 let overlay=document.getElementById('overlay');
 let ctx=overlay.getContext('2d');
 let resultsPanel=document.getElementById('resultsPanel');
-let mediaRecorder,chunks=[],stream;
-let detecting=false;
+let mediaRecorder,chunks=[];
 
-async function initCamera(){
+async function init(){
   await faceapi.nets.tinyFaceDetector.loadFromUri('https://cdn.jsdelivr.net/gh/justadudewhohacks/face-api.js/models');
-  stream=await navigator.mediaDevices.getUserMedia({video:true,audio:false});
+  const stream=await navigator.mediaDevices.getUserMedia({video:true,audio:false});
   video.srcObject=stream;
-  overlay.width=video.videoWidth||640;
-  overlay.height=video.videoHeight||480;
+  mediaRecorder=new MediaRecorder(stream);
+  mediaRecorder.ondataavailable=e=>{if(e.data.size>0)chunks.push(e.data);};
+  mediaRecorder.onstop=uploadReaction;
+  video.onloadedmetadata=()=>{overlay.width=video.videoWidth; overlay.height=video.videoHeight; startTicker();};
 }
 
 function startTicker(){
   document.getElementById('bgBeat').play();
-  mediaRecorder=new MediaRecorder(stream);
-  mediaRecorder.ondataavailable=e=>{if(e.data.size>0)chunks.push(e.data);};
-  mediaRecorder.onstop=uploadReaction;
   mediaRecorder.start();
-  detecting=true;
   let score=0;
   let targetScore=Math.floor(Math.random()*10)+1;
-  const interval=setInterval(async()=>{
-    if(!detecting) return;
-    const det=await faceapi.detectSingleFace(video,new faceapi.TinyFaceDetectorOptions());
+  const tickerInterval=setInterval(()=>{
     ctx.clearRect(0,0,overlay.width,overlay.height);
-    if(det){
-      const box=det.box;
-      ctx.font="bold 48px Arial";ctx.fillStyle="#e1bf78";ctx.textAlign="center";
-      ctx.fillText(score,box.x+box.width/2,box.y-10);
-    }
+    ctx.font="bold 48px Arial"; ctx.fillStyle="#e1bf78"; ctx.textAlign="center";
+    ctx.fillText(score,overlay.width/2,overlay.height/4);
     score++;
     if(score>targetScore){
-      clearInterval(interval);
-      detecting=false;
+      clearInterval(tickerInterval);
       revealScore(targetScore);
     }
   },200);
@@ -91,13 +81,16 @@ function revealScore(finalScore){
   document.getElementById('bgBeat').pause();
   document.getElementById('chime').play();
   confetti({particleCount:150,spread:70,origin:{y:0.6},colors:['#e1bf78','#06954E','#950606']});
+  ctx.font="bold 64px Arial";
+  ctx.fillStyle=finalScore>6?"#06954E":"#950606";
+  ctx.fillText(finalScore+"/10",overlay.width/2,overlay.height/4);
   resultsPanel.style.opacity=1;
   document.getElementById('vibeText').innerText=vibeList[Math.floor(Math.random()*vibeList.length)];
   document.getElementById('typeText').innerText="Your type: "+typeList[Math.floor(Math.random()*typeList.length)];
   document.getElementById('badgeText').innerText="🏆 "+(finalScore>7?"Certified Hot":"Dangerously Average");
   document.getElementById('hotTake').innerText=hotTakeList[Math.floor(Math.random()*hotTakeList.length)];
   setShareButtons(finalScore);
-  setTimeout(()=>{mediaRecorder.stop();},2000);
+  setTimeout(()=>{ mediaRecorder.stop(); },2000);
 }
 
 function setShareButtons(score){
@@ -125,12 +118,7 @@ async function uploadReaction(){
   }
 }
 
-document.getElementById('rateBtn').addEventListener('click',()=>{
-  document.getElementById('rateBtn').style.display='none';
-  startTicker();
-});
-
-initCamera();
+init();
 </script>
 
 </body>
