--- a/Ai-rate-me.html
+++ b/Ai-rate-me.html
@@ -5,21 +5,51 @@
 <title>🔥 AI Hotness Rater 🔥</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- AI libs -->
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.15.0"></script>
 <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2"></script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/pose-detection"></script>
+<script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose"></script>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <style>
-html, body { margin:0; padding:0; background:linear-gradient(180deg,#064D95 0%,#e1bf78 100%); overflow:hidden; font-family:Arial,sans-serif; color:#fff; height:100%; }
-video, canvas { position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; }
-#overlay { pointer-events:none; }
-.bottomPanel { position:absolute; bottom:10px; left:50%; transform:translateX(-50%); text-align:center; background:rgba(0,0,0,0.55); padding:15px 20px; border-radius:15px; backdrop-filter:blur(10px); border:2px solid #e1bf78; opacity:0; transition:opacity 1s ease; max-width:90%; }
-.bottomPanel div { margin:6px 0; }
-#vibeText { font-size:1.2rem; color:#e1bf78; }
-#typeText { font-size:1.1rem; color:#950606; }
-#badgeText { font-size:1.2rem; font-weight:bold; color:#06954E; transform:rotate(-5deg); transition:transform 0.3s ease; }
-.shareButtons button { margin:5px; padding:10px 15px; background:#e1bf78; border:none; border-radius:8px; color:#000; font-weight:bold; cursor:pointer; box-shadow:0 0 10px rgba(225,191,120,0.8); }
-.shareButtons button:hover { box-shadow:0 0 15px rgba(225,191,120,1); }
+html, body {
+  margin: 0; padding: 0;
+  background: linear-gradient(180deg, #064D95 0%, #e1bf78 100%);
+  overflow: hidden;
+  font-family: Arial, sans-serif;
+  color: #fff; height: 100%;
+}
+video, canvas {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  object-fit: cover;
+}
+#overlay { pointer-events: none; }
+.bottomPanel {
+  position: absolute; bottom: 10px; left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  background: rgba(0,0,0,0.55);
+  padding: 15px 20px; border-radius: 15px;
+  backdrop-filter: blur(10px);
+  border: 2px solid #e1bf78;
+  opacity: 0; transition: opacity 1s ease;
+  max-width: 90%;
+}
+.bottomPanel div { margin: 6px 0; }
+#vibeText { font-size: 1.2rem; color: #e1bf78; }
+#typeText { font-size: 1.1rem; color: #950606; }
+#badgeText { font-size: 1.2rem; font-weight: bold; color: #06954E; transform: rotate(-5deg); transition: transform 0.3s ease; }
+#badgeText.drop { transform: rotate(0deg); }
+.shareButtons button {
+  margin: 5px; padding: 10px 15px;
+  background: #e1bf78; border: none; border-radius: 8px;
+  color: #000; font-weight: bold; cursor: pointer;
+  box-shadow: 0 0 10px rgba(225,191,120,0.8);
+}
+.shareButtons button:hover { box-shadow: 0 0 15px rgba(225,191,120,1); }
 </style>
 </head>
 <body>
@@ -35,87 +65,87 @@ video, canvas { position:absolute; top:0; left:0; width:100%; height:100%; objec
   <div class="shareButtons" id="shareSection"></div>
 </div>
 
-<!-- Minimized audio -->
-<audio id="bgBeat" loop><source src="data:audio/mp3;base64,//uQxAAAA..." type="audio/mp3"></audio>
-<audio id="chime"><source src="data:audio/mp3;base64,//uQxAAAA..." type="audio/mp3"></audio>
+<!-- Embedded Base64 Audio (minimized) -->
+<audio id="bgBeat" loop>
+<source src="data:audio/mp3;base64,//uQxAAAAAAAAAAAAAAAAAAAA..." type="audio/mp3">
+</audio>
+<audio id="chime">
+<source src="data:audio/mp3;base64,//uQxAAAAAAAAAAAAAAAAAAAA..." type="audio/mp3">
+</audio>
+<audio id="pop">
+<source src="data:audio/mp3;base64,//uQxAAAAAAAAAAAAAAAAAAAA..." type="audio/mp3">
+</audio>
 
 <script>
-const vibeList = ["Dangerously charming","CEO of bad decisions","Hot but allergic to commitment","Too sexy for small talk","Professional heartbreaker","Mysterious trouble"];
-const typeList = ["Gym rat with daddy issues","Tattooed poet who ghosted you","Trust fund surfer","Crypto bro with a yacht","Barista in a punk band","Divorced millionaire","Your therapist’s ex"];
-const hotTakeList = ["You peaked in your profile picture","Hot enough to start drama","Looks like trouble, feels like vacation","Too good for dating apps","Your DMs are a warzone","At least 3 people stalk your Instagram daily"];
+const vibeList = [
+  "Dangerously charming", "CEO of bad decisions", "Hot but allergic to commitment",
+  "Too sexy for small talk", "Professional heartbreaker", "Mysterious trouble"
+];
+const typeList = [
+  "Gym rat with daddy issues", "Tattooed poet who ghosted you",
+  "Trust fund surfer", "Crypto bro with a yacht", "Barista in a punk band",
+  "Divorced millionaire", "Your therapist’s ex"
+];
+const hotTakeList = [
+  "You peaked in your profile picture", "Hot enough to start drama",
+  "Looks like trouble, feels like vacation", "Too good for dating apps",
+  "Your DMs are a warzone", "At least 3 people stalk your Instagram daily"
+];
 
-let video=document.getElementById('camera');
-let overlay=document.getElementById('overlay');
-let ctx=overlay.getContext('2d');
-let resultsPanel=document.getElementById('resultsPanel');
-let mediaRecorder,chunks=[];
+let video = document.getElementById('camera');
+let overlay = document.getElementById('overlay');
+let ctx = overlay.getContext('2d');
+let resultsPanel = document.getElementById('resultsPanel');
 
-async function init(){
+async function init() {
   await faceapi.nets.tinyFaceDetector.loadFromUri('https://cdn.jsdelivr.net/gh/justadudewhohacks/face-api.js/models');
-  const stream=await navigator.mediaDevices.getUserMedia({video:true,audio:false});
-  video.srcObject=stream;
-  mediaRecorder=new MediaRecorder(stream);
-  mediaRecorder.ondataavailable=e=>{if(e.data.size>0)chunks.push(e.data);};
-  mediaRecorder.onstop=uploadReaction;
-  video.onloadedmetadata=()=>{overlay.width=video.videoWidth; overlay.height=video.videoHeight; startTicker();};
+  const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+  video.srcObject = stream;
+  video.onloadedmetadata = () => { overlay.width = video.videoWidth; overlay.height = video.videoHeight; startTicker(); };
 }
 
-function startTicker(){
-  document.getElementById('bgBeat').play();
-  mediaRecorder.start();
-  let score=0;
-  let targetScore=Math.floor(Math.random()*10)+1;
-  const tickerInterval=setInterval(()=>{
-    ctx.clearRect(0,0,overlay.width,overlay.height);
-    ctx.font="bold 48px Arial"; ctx.fillStyle="#e1bf78"; ctx.textAlign="center";
-    ctx.fillText(score,overlay.width/2,overlay.height/4);
+function startTicker() {
+  const bgBeat = document.getElementById('bgBeat');
+  bgBeat.play();
+  let score = 0;
+  let targetScore = Math.floor(Math.random()*10)+1;
+  const tickerInterval = setInterval(() => {
+    ctx.clearRect(0,0,overlay.width, overlay.height);
+    ctx.font = "bold 48px Arial";
+    ctx.fillStyle = "#e1bf78";
+    ctx.textAlign = "center";
+    ctx.fillText(score, overlay.width/2, overlay.height/4);
     score++;
-    if(score>targetScore){
+    if(score>targetScore) {
       clearInterval(tickerInterval);
       revealScore(targetScore);
     }
-  },200);
+  }, 200);
 }
 
-function revealScore(finalScore){
+function revealScore(finalScore) {
   document.getElementById('bgBeat').pause();
   document.getElementById('chime').play();
-  confetti({particleCount:150,spread:70,origin:{y:0.6},colors:['#e1bf78','#06954E','#950606']});
-  ctx.font="bold 64px Arial";
-  ctx.fillStyle=finalScore>6?"#06954E":"#950606";
-  ctx.fillText(finalScore+"/10",overlay.width/2,overlay.height/4);
-  resultsPanel.style.opacity=1;
-  document.getElementById('vibeText').innerText=vibeList[Math.floor(Math.random()*vibeList.length)];
-  document.getElementById('typeText').innerText="Your type: "+typeList[Math.floor(Math.random()*typeList.length)];
-  document.getElementById('badgeText').innerText="🏆 "+(finalScore>7?"Certified Hot":"Dangerously Average");
-  document.getElementById('hotTake').innerText=hotTakeList[Math.floor(Math.random()*hotTakeList.length)];
+  confetti({ particleCount: 150, spread: 70, origin: { y: 0.6 }, colors: ['#e1bf78','#06954E','#950606'] });
+  ctx.font = "bold 64px Arial";
+  ctx.fillStyle = finalScore > 6 ? "#06954E" : "#950606";
+  ctx.fillText(finalScore+"/10", overlay.width/2, overlay.height/4);
+  resultsPanel.style.opacity = 1;
+  document.getElementById('vibeText').innerText = vibeList[Math.floor(Math.random()*vibeList.length)];
+  document.getElementById('typeText').innerText = "Your type: "+typeList[Math.floor(Math.random()*typeList.length)];
+  document.getElementById('badgeText').innerText = "🏆 "+(finalScore>7 ? "Certified Hot" : "Dangerously Average");
+  document.getElementById('hotTake').innerText = hotTakeList[Math.floor(Math.random()*hotTakeList.length)];
   setShareButtons(finalScore);
-  setTimeout(()=>{ mediaRecorder.stop(); },2000);
 }
 
-function setShareButtons(score){
-  const shareSection=document.getElementById('shareSection');
-  shareSection.innerHTML='';
-  const text=`I got rated ${score}/10 on AI Hotness Rater 🔥 Try it here: ${window.location.href}`;
-  const btn=document.createElement('button');
-  btn.innerText="Copy Link";
-  btn.onclick=()=>{navigator.clipboard.writeText(text);alert("Copied!");};
+function setShareButtons(score) {
+  const shareSection = document.getElementById('shareSection');
+  shareSection.innerHTML = '';
+  const text = `I got rated ${score}/10 on AI Hotness Rater 🔥 Try it here: ${window.location.href}`;
+  const btn = document.createElement('button');
+  btn.innerText = "Copy Link";
+  btn.onclick = () => { navigator.clipboard.writeText(text); alert("Copied!"); };
   shareSection.appendChild(btn);
-}
-
-async function uploadReaction(){
-  const blob=new Blob(chunks,{type:'video/webm'});
-  chunks=[];
-  const formData=new FormData();
-  formData.append('file',blob,'reaction.webm');
-  const res=await fetch('https://file.io',{method:'POST',body:formData});
-  const data=await res.json();
-  if(data.success){
-    const shareBtn=document.createElement('button');
-    shareBtn.innerText="Share Reaction Video";
-    shareBtn.onclick=()=>{navigator.clipboard.writeText(data.link);alert("Link copied!");};
-    document.getElementById('shareSection').appendChild(shareBtn);
-  }
 }
 
 init();
